@@ -1,4 +1,4 @@
-/* $Id: tmux.c,v 1.63 2008-06-19 22:04:02 nicm Exp $ */
+/* $Id: tmux.c,v 1.64 2008-06-19 23:20:45 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -214,6 +214,7 @@ main(int argc, char **argv)
 	options_set_colours(&global_options, "status-colour", 0x02);
 	options_set_number(&global_options, "bell-action", BELL_ANY);
 	options_set_number(&global_options, "history-limit", 2000);
+	options_set_number(&global_options, "display-time", 750);
 	options_set_key(&global_options, "prefix", META);
 	options_set_string(&global_options, "status-left", "%s", ""); /* ugh */
 	options_set_string(
