@@ -1,3 +1,8 @@
+20 June 2008
+
+* New option, display-time, sets the time status line messages stay on screen
+  (unless a key is pressed). Set in milliseconds, default is 750 (0.75 seconds).
+
 19 June 2008
 
 * Use "status" consistently for status line option, and prefix for "prefix" key
@@ -511,4 +516,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.128 2008-06-19 22:04:01 nicm Exp $
+$Id: CHANGES,v 1.129 2008-06-19 23:20:45 nicm Exp $
